--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,8 @@
 
 [env:modwifi]
 platform = espressif8266
-board = d1_mini
+board = modwifi
 framework = arduino
 lib_deps =
-    PubSubClient
+    PubSubClient,
+    ArduinoJson
